<resources>
    <string name="app_name">Jóvenes a la 42 muestra nacional de teatro</string>
    <string name="imagen">Imagen del compañero</string>
    <string name="nombre">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="facebook">Url del perfil de Facebook</string>
    <string name="instagram">Url del perfil de Instagram</string>
    <string name="tiktok">Url del perfil de TikTok</string>
    <string name="numero_telefono">Número de WhatsApp (solo de México)</string>
    <string name="especialidad">"  Especialidad  "</string>
    <string name="descripcion">Breve semblanza</string>
    <string name="descripcion_acomodo">cambia la forma de acomodar la lista</string>
    <string name="descripcion_guardado">guarda o desarchiva profesionales</string>
    <string name="invitado">Sesión de invitado</string>
    <string name="orden">ORDEN</string>
    <string name="por_estado">Por estado</string>
    <string name="por_nombre">Por nombre</string>
    <string name="filtros">FILTROS</string>
    <string name="resultados">36 resultados</string>
    <string name="estado">Estado</string>
    <string name="filtro">Filtro</string>
    <string name="restablecer_filtros">Restablecer filtros</string>
    <string name="limpiar_filtros">Limpiar filtros</string>
    <string name="bienvenido_joven_teatrero">¡Bienvenides, Jóvenes a la muestra!</string>
    <string name="id">id de acceso</string>
    <string name="entrar">Entrar</string>
    <string name="edite_detalles">Edite sus detalles profesionales</string>
    <string name="seleccione_especialidades">Seleccione sus especialidades</string>
    <string name="actuacion">Actuación</string>
    <string name="coordinacion">Coordinación</string>
    <string name="danza">Danza</string>
    <string name="direccion">Dirección</string>
    <string name="dramaturgia">Dramaturgia</string>
    <string name="escenografia">Escenografía</string>
    <string name="gestion_cultural">Gestión cultural</string>
    <string name="iluminacion">Iluminación</string>
    <string name="musicalizacion">Musicalización</string>
    <string name="produccion">Producción</string>
    <string name="vestuario">Vestuario</string>
    <string name="agregue_contacto">Agregue modos de contacto (opcionales)</string>
    <string name="guardar">Guardar</string>
    <string name="no_eres_parte">¿No eres ni has sido parte del programa Jóvenes a la muestra?</string>
    <string name="entrar_como_invitado">Entrar como invitado</string>
    <string name="saludos">¡Saludos, %1$s!</string>
    <string name="correo">correo</string>
</resources>