<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/edite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/edite_detalles"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edite">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/campo2"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        app:layout_constraintVertical_weight="1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campo1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/descripcion" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/seleccione"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/seleccione_especialidades"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campo2" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seleccione">

        <com.google.android.material.chip.Chip
            android:id="@+id/actuacion"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actuacion"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/coordinacion"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordinacion"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/danza"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/danza"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/direccion"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/dramaturgia"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dramaturgia"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/escenografia"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escenografia"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/gestion_cultural"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gestion_cultural"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/iluminacion"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iluminacion"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/musicalizacion"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musicalizacion"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/produccion"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produccion"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/vestuario"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vestuario"/>

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>