<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:theme="@style/SelectableItemBackground"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/imagen"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/nombre"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/especialidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/especialidad"
            android:textColor="?attr/colorSecondaryVariant"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>