<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary">

    <View
        android:id="@+id/viewA"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/verde_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewC"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewA" />

    <View
        android:id="@+id/viewB"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewA" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="85dp"
        android:src="@drawable/theater"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/bienvenido_joven_teatrero"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/viewA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewA" />

    <EditText
        android:id="@+id/campoId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/campos_login"
        android:drawableStart="@drawable/key"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="numberPassword"
        android:padding="16dp"
        android:textColor="@color/verde_700"
        android:textColorHint="@color/verde_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewB" />

    <Button
        android:id="@+id/botonEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/campos_login"
        android:padding="10dp"
        android:text="@string/entrar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/verde_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoId" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/no_eres_parte"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/botonEntrarComoInvitado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/botonEntrarComoInvitado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/campos_login"
        android:padding="10dp"
        android:text="@string/entrar_como_invitado"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/verde_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewA"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>