<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/contenedorPrincipal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navegacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="?attr/colorOnPrimary"
            app:menu="@menu/menu_navegacion" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/configuracion"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?attr/colorOnPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/editar_detalles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="?attr/colorOnPrimary"
                app:cardElevation="10dp"
                app:cardForegroundColor="@drawable/color_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="?attr/colorPrimary">

                <TextView
                    android:id="@+id/saludo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:text="@string/saludo"
                    android:textColor="?attr/colorSecondaryVariant"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/etiqueta_orden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/orden"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editar_detalles" />

            <RadioGroup
                android:id="@+id/orden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etiqueta_orden">

                <RadioButton
                    android:id="@+id/porEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:checked="true"
                    android:layoutDirection="rtl"
                    android:text="@string/por_estado"
                    android:textAppearance="?android:attr/textAppearanceListItem" />

                <RadioButton
                    android:id="@+id/porNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackground"
                    android:layoutDirection="rtl"
                    android:text="@string/por_nombre"
                    android:textAppearance="?android:attr/textAppearanceListItem" />
            </RadioGroup>

            <TextView
                android:id="@+id/etiqueta_filtros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/filtros"
                android:textAppearance="?android:attr/textAppearanceListItem"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orden" />

            <TextView
                android:id="@+id/contador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/resultados"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/orden"
                app:layout_constraintTop_toBottomOf="@id/orden" />

            <ExpandableListView
                android:id="@+id/filtros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:childDivider="?attr/colorOnPrimary"
                android:layoutDirection="rtl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etiqueta_filtros" />

            <Space
                android:id="@+id/espacio"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filtros"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/restablecerFiltros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/espacio"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/restablecer_filtros"
                android:layout_gravity="bottom|center_horizontal"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>